fix: Adapt spacing & font-sizes for mobile

--- a/src/app/[locale]/[slug]/page.module.css
+++ b/src/app/[locale]/[slug]/page.module.css
@@ -1,18 +1,18 @@
 .article {
-  padding: 1rem 0;
+  padding: var(--space-base) 0;
 }
 
 .columns {
   display: flex;
   flex-direction: row-reverse;
-  gap: 1rem;
+  gap: var(--space-base);;
 }
 
 .media {
   flex-basis: 50%;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: var(--space-base);;
 }
 
 .mediaImage {
