--- a/src/app/[locale]/page.module.css
+++ b/src/app/[locale]/page.module.css
@@ -1,7 +1,7 @@
 .grid > div {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 1rem;
+  gap: var(--space-base);
   width: 100%;
 }
 
