--- a/src/components/CoverCard.module.css
+++ b/src/components/CoverCard.module.css
@@ -34,14 +34,14 @@
 .title {
   position: absolute;
   top: -100%;
-  left: 1rem;
-  right: 1rem;
+  left: var(--space-base);
+  right: var(--space-base);
   color: var(--color-bg);
   font-size: 2rem;
   transition:
     top 0.4s ease,
     opacity 0.4s ease;
-  padding: 1rem 0;
+  padding: var(--space-base) 0;
   opacity: 0;
 }
 
