--- a/src/components/Title.module.css
+++ b/src/components/Title.module.css
@@ -2,7 +2,7 @@
   display: block;
   border-bottom: 4px solid var(--color-fg-highlight);
   font-size: 3rem;
-  margin-bottom: 1rem;
+  margin-bottom: var(--space-base);
   color: var(--color-fg-highlight);
 }
 
